Update '~' to 'HOME' to prevent unexpected issue in nix setup..?

--- a/tmux.conf
+++ b/tmux.conf
@@ -5,7 +5,7 @@ setw -g mouse on
 # set-environment -g PATH "/opt/homebrew/bin:/bin:/usr/bin"
 
 # install tpm plugins
-set-environment -g TMI_PLUGIN_MANAGER_PATH "~/.tmux/plugins/tpm"
+set-environment -g TMI_PLUGIN_MANAGER_PATH "$HOME/.tmux/plugins/tpm"
 
 # colors setting
 set -g default-terminal "tmux-256color"
